compiler/tests/errortests/arithmetic/arithmetic-subtract-string.txt
FILENAME:4:26: error: Could not determine type of initial value for variable 'result'.
    let result : i32 = x - s;  // Error: cannot subtract string from i32
                         ^
FILENAME:4:26: error: Type mismatch in binary expression: left is of type 'i32', right is of type 'string'.
    let result : i32 = x - s;  // Error: cannot subtract string from i32
                         ^
